--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,22 @@ repositories {
 dependencies {
     /*spring依赖*/
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.8.RELEASE'
+    compile group: 'org.springframework', name: 'spring-tx', version: '4.3.8.RELEASE'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.8.RELEASE'
+
+    // mysql驱动
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.26'
+    // 数据库连接池druid
+    compile group: 'com.alibaba', name: 'druid', version: '1.0.7'
+    // mybatis依赖
+    compile group: 'org.mybatis', name: 'mybatis', version: '3.2.2'
+    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.2.0'
+    compile group: 'org.mybatis', name: 'mybatis-ehcache', version: '1.0.0'
 
 
-    
 
     /*spring测试*/
     testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.8.RELEASE'
-
-
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
