--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ dependencies {
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.2.0'
     compile group: 'org.mybatis', name: 'mybatis-ehcache', version: '1.0.0'
 
+    // log4j2
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-web', version: '2.10.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.10.0'      //从目前发现的看,少了此包  mybatis 的SQL信息不能打印
+
+
 
 
     /*spring测试*/
